feat(backend): add T5 v38 generation loop with greedy decoding, runtime integration, and tests