@@ -1,24 +1,27 @@
 package com.aresstack.windirectml.inference.t5;
 
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Objects;
 import java.util.Set;
 
 /**
- * Token-based stopping policy for the future T5 decoder loop.
+ * Token-based stopping policy for the T5 decoder loop.
  */
 public final class T5StopTokenPolicy {
     private final Set<Integer> stopTokenIds;
 
     private T5StopTokenPolicy(Set<Integer> stopTokenIds) {
-        this.stopTokenIds = Set.copyOf(Objects.requireNonNull(stopTokenIds, "stopTokenIds"));
+        this.stopTokenIds = Collections.unmodifiableSet(new HashSet<>(Objects.requireNonNull(stopTokenIds, "stopTokenIds")));
     }
 
     public static T5StopTokenPolicy stopAtEos(int eosTokenId) {
         if (eosTokenId < 0) {
             throw new IllegalArgumentException("eosTokenId must not be negative: " + eosTokenId);
         }
-        return new T5StopTokenPolicy(Set.of(eosTokenId));
+        Set<Integer> tokens = new HashSet<>();
+        tokens.add(eosTokenId);
+        return new T5StopTokenPolicy(tokens);
     }
 
     public static T5StopTokenPolicy stopAtAny(Set<Integer> tokenIds) {
@@ -34,7 +37,7 @@ public final class T5StopTokenPolicy {
     }
 
     public static T5StopTokenPolicy neverStop() {
-        return new T5StopTokenPolicy(Set.of());
+        return new T5StopTokenPolicy(Collections.<Integer>emptySet());
     }
 
     public boolean shouldStop(int tokenId) {
